# media_files_upload

./: .env  .env.mediafiles  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ТЗ
nginx/: nginx.conf
src/: Dockerfile  config.py  database.py  entrypoint.sh  main.py  models.py  requirements.txt
src/commands/: cleanup.sh  mediafiles_cleanup_old_files.py  temp.py
src/mediafiles/: cloud_client.py  config.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py  worker.py
src/migrations/: env.py
src/migrations/versions/: 4c17eb70fac7_database_create.py
tests/: mediafiles.py
