[tool.poetry]
name = "media-files-upload"
version = "0.1.0"
description = ""
authors = ["superdef454 <superdef454@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.110.1"
aiofiles = "^24.1.0"
sqlalchemy = "^2.0.32"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
ruff = "^0.6.0"
aiologger = "^0.7.0"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"
aiohttp = "^3.10.4"
celery = {extras = ["redis"], version = "^5.4.0"}
asgiref = "^3.8.1"
alembic = "^1.13.2"
websockets = "^13.0"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["RUF", "D", "INP001", "RET504", "S311", "PERF203",
"BLE001", "B008", "ANN003", "ERA001", "FA102", "TRY301"]

[tool.ruff]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
